# Traffic-Sign-Recognition-and-Driving-Awareness-System

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: QUALITY_METRICS_REPORT.md
scripts/: evaluate_cnn.py  evaluate_yolo.py  package_assets.py  preview_video.py  run.py  train.py
src/traffic_sign_system/: __init__.py  paths.py
src/traffic_sign_system/config/: __init__.py  config.yaml  sign_classes.py
src/traffic_sign_system/domain/: __init__.py  hazard_engine.py
src/traffic_sign_system/evaluation/: __init__.py  classifier.py
src/traffic_sign_system/interfaces/: dashboard.py
src/traffic_sign_system/interfaces/web/blueprints/: __init__.py  api.py  views.py
src/traffic_sign_system/interfaces/web/static/css/: animations.css  components.css  layout.css  main.css  variables.css
src/traffic_sign_system/interfaces/web/static/js/: api.js  app.js  charts.js  socket.js  ui.js
src/traffic_sign_system/interfaces/web/templates/: index.html
src/traffic_sign_system/models/: __init__.py  cnn_classifier.py
src/traffic_sign_system/telemetry/: __init__.py  logger.py
src/traffic_sign_system/vision/: __init__.py  detector.py  pipeline.py  preprocessor.py
