[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-sign-system"
version = "1.0.0"
description = "Traffic Sign Recognition & Driving Awareness System"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traffic_sign_system = ["config/*.yaml"]
